--- a/1. Coding_Tutorial.ipynb
+++ b/1. Coding_Tutorial.ipynb
@@ -40,14 +40,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ug-wCIQwKoQi"
+        "id": "ug-wCIQwKoQi",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e41810d2-1e74-4b92-a577-46cbe9012623"
       },
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'2.4.1'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -99,7 +120,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3xaahw5pKoQz"
+        "id": "3xaahw5pKoQz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "037ad8f3-8e26-43ed-96e6-a8b92040b15d"
       },
       "source": [
         "# Train a feedforward neural network for image classification\n",
@@ -124,6 +149,37 @@
         "model.fit(x_train, y_train, epochs=3, batch_size=32)\n",
         "\n",
         "print('Model trained successfully!')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loading data...\n",
+            "\n",
+            "MNIST dataset loaded.\n",
+            "\n",
+            "Training model...\n",
+            "\n",
+            "Epoch 1/3\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.7324 - accuracy: 0.7937\n",
+            "Epoch 2/3\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.2583 - accuracy: 0.9263\n",
+            "Epoch 3/3\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.2143 - accuracy: 0.9388\n",
+            "Model trained successfully!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ura3eySqTB6D"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
